# mail_list

./: .env.sample  README.md  groups.json  pyproject.toml  test.py
blog/: admin.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
mail/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mail/management/commands/: startmailing.py
mail/migrations/: 0001_initial.py  0002_alter_maillistsetting_periodicity_and_more.py  0003_alter_mailingattempt_parent_mail.py  0004_alter_client_options_alter_mailingattempt_options_and_more.py  0005_alter_message_options.py  0006_maillistsetting_last_send_maillistsetting_next_send_and_more.py  0007_alter_mailingattempt_last_attempt.py  0008_remove_maillistsetting_receivers_and_more.py  0009_alter_maillistsetting_receivers.py  0010_maillistsetting_owner.py  0011_alter_maillistsetting_options.py  0012_client_owner_message_owner.py  0013_alter_client_owner_alter_message_owner.py
mail/templates/: index.html
mail/templates/mail/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  index.html  mailingattempt_detail.html  mailingattempt_list.html  maillistsetting_confirm_delete.html  maillistsetting_detail.html  maillistsetting_form.html  maillistsetting_list.html  message_detail.html  (+2 more)
main_app/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/: login.html
(+4 files in other folders)
