[tool.poetry]
name = "mail-list"
version = "0.1.0"
description = "service for sending mails"
authors = ["Borodin Dmitriy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.2"
psycopg2 = "^2.9.9"
pillow = "^10.4.0"
redis = "^5.0.8"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
